fix lng option on mobile background color

--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -102,7 +102,6 @@
 
       @include responsive-max(lg) {
         padding: 0.6em 2.6em;
-        background-color: blue;
         border: 1px solid $paragraph;
       }
 
